--- a/preseed.cfg
+++ b/preseed.cfg
@@ -16,27 +16,17 @@ d-i clock-setup/utc boolean true
 d-i time/zone string Europe/Berlin
 d-i clock-setup/ntp boolean true
 
-# Set up users and passwords
+# Set up root password
 d-i passwd/root-password password root
 d-i passwd/root-password-again password root
 
-d-i passwd/make-user boolean true
-d-i passwd/user-fullname string Jakob
-d-i passwd/username string jakob
-d-i passwd/user-password password jakob
-d-i passwd/user-password-again password jakob
-d-i user-setup/encrypt-home boolean false
-
+# Create the primary user Tobias with administrative rights
 d-i passwd/make-user boolean true
 d-i passwd/user-fullname string Tobias
 d-i passwd/username string tobias
 d-i passwd/user-password password tobias
 d-i passwd/user-password-again password tobias
 d-i user-setup/encrypt-home boolean false
-
-# Add Jakob to the sudo group (using late_command to ensure it's after user creation)
-d-i preseed/late_command string \
-    in-target usermod -aG sudo jakob
 
 # Automatic partitioning - guided, entire disk
 d-i partman-auto/method string regular
@@ -61,6 +51,11 @@ tasksel tasksel/first multiselect standard, gnome-desktop, ssh-server
 d-i grub-pc/install_devices string /dev/sda
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
+
+# Late command to create user Jakob and add Tobias to sudo group
+d-i preseed/late_command string \
+    in-target usermod -aG sudo tobias; \
+    in-target /bin/bash -c "id -u jakob &>/dev/null || (useradd -m -s /bin/bash jakob && echo 'jakob:jakob' | chpasswd)"
 
 # Finish the installation with an automatic reboot
 d-i finish-install/reboot_in_progress note
